# asahi-cuttlefish

./: .gitignore  README-fedora.md  README.md
base/cvd/: MODULE.bazel
base/cvd/allocd/: alloc_iproute2.cpp  alloc_utils.cpp  alloc_utils.h
base/cvd/build_external/: build_external.MODULE.bazel
base/cvd/build_external/libwebrtc/: BUILD.libwebrtc.bazel  PATCH.third_party_libyuv.patch  libwebrtc.MODULE.bazel
base/debian/: control  cuttlefish-base.cuttlefish-host-resources.init
base/rpm/: cuttlefish-aosp.spec  cuttlefish-base.spec  cuttlefish-host-resources.sh  cuttlefish-lineageos.spec  cuttlefish-scrcpy.spec
container/: README.md
container/rpm/: cuttlefish-container.spec
cuttlefish-integration-gigabyte-arm64/rpm/: cuttlefish-integration-gigabyte-arm64.spec
frontend/rpm/: cuttlefish-frontend.spec
patches/: 0001-mtools-fix-termio-h-fedora.patch  0002-libzip-bump-to-bcr1-fix-lib64-fedora.patch  0003-host-resources-fedora-firewalld.patch  0004-stamp-helper-remove-dpkg-parsechangelog.patch  0005-module-bazel-bump-dep-versions.patch
scrcpy/app/: scrcpy.1
scrcpy/app/src/: cli.c  control_msg.c  control_msg.h  cuttlefish_frame_source.c  cuttlefish_frame_source.h  events.h  input_manager.c  options.c  options.h  scrcpy.c  (+6 more)
tools/: acf  build_scrcpy_server_aarch64.sh  getchromium  ika  scrcpy-primary-desktop
tools/baseimage/: README.md
tools/buildutils/: build_crosvm_fedora.sh  build_package.sh  build_package_fedora.sh  build_packages.sh  build_packages.sh.EXAMPLE  build_packages_fedora.sh  installbazel_fedora.sh
tools/testutils/: prepare_host_fedora.sh
(+39 files in other folders)
